# rust-first

./: Cargo.toml
src/: display_name.rs  display_uri.rs  lib.rs  main.rs  output.rs  workflow.rs
tests/: lib.rs
