[package]
name = "first"
version = "0.0.1"
authors = [ "Rouzbeh Delavari <rouzwawi@gmail.com>" ]


[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = ["disp-name"]

# A feature with no dependencies is used mainly for conditional compilation,
# like `#[cfg(feature = "disp-name")]`.
disp-name = []
disp-uri = []

[[bin]]
name = "hello"


[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8.4"


[dependencies.clap]
version = "2.10.0"
features = [ "suggestions", "color", "unstable" ]
